# smartFacility

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  FAQ.md  Makefile  README.md  compose.yml  docker-compose-sonarqube.yml
.github/: dependabot.yml
.github/workflows/: build-check.yml  ci.yml  format-scan.yml  web-bff-ci.yml
20250401-063841/coverage/: class_index.html  function_index.html  index.html  z_095011898a1367ac_device_service_py.html  z_23dd600742729edb_device_service_py.html  z_37f430c995cee311_device_routes_py.html  z_37f430c995cee311_health_routes_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_dependencies_py.html  z_5f5a17c013354698_main_py.html  z_748a0465d46c2a16_logging_config_py.html  z_ab57d6c3155905d0_device_api_client_py.html  z_ab57d6c3155905d0_mock_device_api_client_py.html  z_ade37b06cd8bc47a_device_client_py.html  z_d92fa5f5a156847b_device_model_py.html
20250401-063841/test/: index.html
20250401-064816/coverage/: class_index.html  index.html  (+13 more)
adr/: 003-choose-fe-framework.md  004-security-scan-tool.md
coverage/: class_index.html  function_index.html  index.html  z_095011898a1367ac_device_service_py.html  z_23dd600742729edb_device_service_py.html  z_37f430c995cee311_device_routes_py.html  z_37f430c995cee311_health_routes_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_dependencies_py.html  z_5f5a17c013354698_main_py.html  z_748a0465d46c2a16_logging_config_py.html  z_ab57d6c3155905d0_device_api_client_py.html  z_ab57d6c3155905d0_mock_device_api_client_py.html  z_ade37b06cd8bc47a_device_client_py.html  z_d92fa5f5a156847b_device_model_py.html
docker/: web-bff.Dockerfile
scripts/: create-config.sh  dev-run-bff.sh  run-make.sh  run-npm.sh  scan.sh  set-vm-memory.sh  sonar-scan.sh
test/: index.html
web/: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  package-lock.json  package.json
web-bff/: .dockerignore  .editorconfig  .pre-commit-config.yaml  .trivyignore  Dockerfile  Dockerfile.dev  Makefile  main.py  pyproject.toml  sonar-scanner.properties  sonar-scanner.properties.example  trivy.yaml
web-bff/app/: dependencies.py  main.py
web-bff/app/application/: device_service.py
web-bff/app/config/: logging_config.json
web-bff/app/domain/client_interfaces/: device_client.py
web-bff/app/domain/models/: device_model.py
web-bff/app/domain/service_interfaces/: device_service.py
web-bff/app/infrastructure/: device_api_client.py  mock_device_api_client.py
web-bff/app/presentation/: device_routes.py  health_routes.py
web-bff/app/utils/: logging_config.py
web-bff/tests/: conftest.py  requirements.txt
web-bff/tests/application/: test_device_service.py
web-bff/tests/infrastructure/: test_device_api_client.py
web-bff/tests/presentation/: test_device_routes.py
(+1040 files in other folders)
